# acem

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: checks.yml  dependabot.yml  publish.yml
CascadeModels/: NSParametersHist.ipynb
DataGen/: .add_to_csv.py.swp  DataGen.submit  DataGen_PION.submit  DataGen_executable.sh  add_to_csv.py  inp2txt.sh  inpBase.txt  inp_gen.csv
DataGen/.ipynb_checkpoints/: DataGen-checkpoint.submit  DataGen_executable-checkpoint.sh  WorkBook-checkpoint.ipynb  add_to_csv-checkpoint.py  gen_inp-checkpoint.py  inpBase-checkpoint.txt  inp_gen-checkpoint.csv  log-checkpoint.1  log-checkpoint.2  out-checkpoint.1  test-checkpoint.csv
DataGen/DataOutputs_PION/.ipynb_checkpoints/: PIONworkbook-checkpoint.ipynb  cnt_csvs-checkpoint.py  gather_leftover_txts-checkpoint.sh  gather_leftovers_backwards-checkpoint.sh  rename_temp-checkpoint.sh  sim_counts-checkpoint.csv
DataGen/FlukaOutputs/: NEUTRON_27_5_001.txt  NEUTRON_27_5_003.txt  input.txt
misc/arxv/: Coefs_17-17-8_(0.1-0.1-0.01).npy
misc/scripts/: check.py  ltot.py  paper.py  pythia.py  sanity.py  spline.py  util.py
resources/notebooks/: FitSpline.ipynb
resources/scripts/: FitSpline.py  check.py  paper.py
src/: FitSpline.py  Sample.py  ltot.py  media.py  model.py  sanity.py
src/.ipynb_checkpoints/: Sample-checkpoint.ipynb
src/acem/: model.py  pdg.py  util.py
src/diorama/: maths.py  model.py  util.py
src/shosim/: math.py  maths.py  media.py  model.py  pdg.py  sample.py  util.py
support/scripts/: ltot.py  paper.py  run_pythia.py
(+63 files in other folders)
